--- a/assets/design.css
+++ b/assets/design.css
@@ -100,3 +100,10 @@ h6 {
 #data-sources-description-content {
     margin: 2%;
 }
+
+#data-sources-description-content table,
+#data-sources-description-content th,
+#data-sources-description-content td {
+  border: thin solid black;
+  border-collapse: collapse;
+}
