--- a/assets/design.css
+++ b/assets/design.css
@@ -8,31 +8,43 @@ body {
     background-color: #EDF0F6;
     font-weight: 200;
 }
+
 h1 {
     color: #0079A4;
     font-size: 500%;
     font-weight: 500;
 }
+
 h2 {
     color: #0079A4;
     font-size: 300%;
     font-weight: 500;
 }
+
 h3 {
     color: #0079A4;
     font-size: 200%;
     font-weight: 500;
 }
-h4, h5 {
+
+h4 {
     color: #0079A4;
     font-size: 150%;
     font-weight: 500;
 }
+
+h5 {
+    color: #0079A4;
+    font-size: 120%;
+    font-weight: 500;
+}
+
 h6 {
     color: #0079A4;
     font-size: 100%;
     font-weight: 500;
 }
+
 #headline {
     width: 100%;
     height: 100%;
@@ -129,4 +141,10 @@ h6 {
     border: 1px solid #f2f2f2;
     padding: 8px;
     border-collapse: collapse;
+    text-align: left;
+}
+
+#data-sources-description-content td:first-child{
+    font-weight: bold;
+    width: 20%;
 }
