insert margin-bottom for data source description

--- a/assets/design.css
+++ b/assets/design.css
@@ -110,9 +110,7 @@ h6 {
 }
 
 #data-sources-description-content {
-    margin-left: 3%;
-    margin-right: 3%;
-    margin-top: 2%;
+    margin: 2% 3%;
 }
 
 #data-sources-description-content table {
