--- a/assets/design.css
+++ b/assets/design.css
@@ -146,3 +146,16 @@ h6 {
     font-weight: bold;
     width: 20%;
 }
+
+
+#footer {
+    width: 100%;
+    height: 100%;
+    position: -webkit-sticky;
+    position: sticky;
+    vertical-align: middle;
+    text-align: center;
+    top: 0;
+    z-index: 999;
+    background: #EDF0F6;
+}
