--- a/assets/design.css
+++ b/assets/design.css
@@ -99,7 +99,14 @@ h6 {
 
 .daily-overview-figures {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+
+@media (min-width: 500px) {
+  .daily-overview-figures { grid-template-columns: repeat(2, 1fr); }
+}
+
+@media (min-width: 1000px) {
+  .daily-overview-figures { grid-template-columns: repeat(4, 1fr); }
 }
 
 .daily-overview-single-figure {
@@ -151,11 +158,6 @@ h6 {
 #footer {
     width: 100%;
     height: 100%;
-    position: -webkit-sticky;
-    position: sticky;
-    vertical-align: middle;
     text-align: center;
-    top: 0;
-    z-index: 999;
     background: #EDF0F6;
 }
